@@ -8,12 +8,8 @@
 
 INSTALL := install -o root -g root
 INSTALL_755 := $(INSTALL) -m 755
-ACE_SUBDIR := ACE_wrappers
-ACE_ARCHIVE := pwd ls -al $(shell ls -1 ACE+TAO+CIAO-src-*.tar.gz 2>/dev/null || echo ace-archive-missing)
-MPC_SUBDIR := MPC
-MPC_ARCHIVE := $(shell ls -1 MPC*.tar.gz 2>/dev/null || echo mpc-archive-missing)
-MWCFLAGS := -type gnuace -features "ssl=1,zlib=1,zzip=1,xt=1,tk=1,fl=1,fox=1,qt4=1,exceptions=1,ace_qt4reactor=1" -noreldefs -genins
-ACE_MAKE_FLAGS := ssl=1 zlib=1 zzip=1 xt=1 tk=1 fl=1 fox=1 qt4=1 debug=0 inline=1 optimize=1 exceptions=1 ace_qt4reactor=1
+MWCFLAGS := -type gnuace -features "ssl=1,zlib=1,xt=1,tk=1,qt4=1,ace_qt4reactor=1" -noreldefs -genins
+ACE_MAKE_FLAGS := ssl=1 zlib=1 debug=0 inline=1 optimize=1
 PRJ_INSTALL_FLAGS := -k -s man_files,lib_output,header_files,inline_files,exe_output,idl_files,pidl_files,template_files  -b lib_output=usr/lib -b exe_output=usr/bin -b idl_files=usr/include -b pidl_files=usr/include -b template_files=usr/include -b header_files=usr/include -b inline_files=usr/include -b idl_files=usr/include -b man_files=usr/share/man
 MAN1 := debian/Basic_Logging_Service.1 \
 	debian/Event_Logging_Service.1 \
@@ -32,12 +28,10 @@ DOXYGEN_FILES_TO_REMOVE := -name '*.tag' -o \
                            -name '*.map' -o \
                            -name 'index.hh?'
 
-ifneq (mpc-archive-missing,$(MPC_ARCHIVE))
-export MPC_ROOT := $(shell pwd)/$(MPC_SUBDIR)
-endif
-export ACE_ROOT := $(shell pwd)/$(ACE_SUBDIR)
+export ACE_ROOT := $(shell pwd)
 export TAO_ROOT := $(ACE_ROOT)/TAO
 export CIAO_ROOT := $(TAO_ROOT)/CIAO
+export MPC_ROOT := $(ACE_ROOT)/MPC
 export LD_LIBRARY_PATH := $(LD_LIBRARY_PATH):$(ACE_ROOT)/lib
 export QTDIR := /usr/share/qt4
 
@@ -49,17 +43,12 @@ UNTIL := $(PREPATCH_MARK)
 .NOTPARALLEL: debian/mpc-ace.sgml debian/%.1 debian/%.5 prepatch extract doxygen clean install build binary-indep binary-arch binary
 .PHONY: doxygen patch prepatch extract build clean binary-indep binary-arch binary install unpatch source diff
 
-extract-stamp: $(ACE_ARCHIVE)
-	tar -xjf $<
-	cp debian/platform_macros.GNU $(ACE_ROOT)/include/makeinclude
-	cp debian/config.h $(ACE_ROOT)/ace/config.h
+extract-stamp:
+	cp include/makeinclude/platform_linux.GNU $(ACE_ROOT)/include/makeinclude/platform_macros.GNU
+	cp ace/config-linux.h $(ACE_ROOT)/ace/config.h
 	touch $@
 
 extract: extract-stamp
-
-$(MPC_ROOT): $(MPC_ARCHIVE)
-	tar -xzf $<
-	touch $@
 
 debian/mpc-ace.sgml: ACE_wrappers/MPC/docs/MPC.sgml
 	sed -e 's/mpc\.pl/mpc-ace/g' -e 's/mwc\.pl/mwc-ace/g' $< > $@
@@ -68,23 +57,19 @@ debian/%.1 debian/%.5: debian/%.sgml
 	docbook-to-man $< > $@
 
 # Prepare a ACE_wrappers directory where most of the patches are applied.
-ifneq (mpc-archive-missing,$(MPC_ARCHIVE))
 prepatch-stamp: extract-stamp $(MPC_ROOT)
-else
-prepatch-stamp: extract-stamp
-endif
-	dpatch apply-until $(UNTIL)
-
-	cp debian/ACE-DPKG.mwc $(ACE_ROOT)
-	cd $(ACE_ROOT) &&  bin/mwc.pl $(MWCFLAGS) ACE-DPKG.mwc
-	cp debian/TAO-DPKG.mwc $(TAO_ROOT)
-	cd $(TAO_ROOT) &&  ../bin/mwc.pl $(MWCFLAGS) TAO-DPKG.mwc
+#	dpatch apply-until $(UNTIL)
+#	cp debian/ACE-DPKG.mwc $(ACE_ROOT)
+	cd $(ACE_ROOT) &&  $(ACE_ROOT)/bin/mwc.pl TAO/TAO_ACE.mwc $(MWCFLAGS)
+#ACE-DPKG.mwc
+#	cp debian/TAO-DPKG.mwc $(TAO_ROOT)
+#	cd $(TAO_ROOT) &&  $(TAO_ROOT)/bin/mwc.pl $(MWCFLAGS)
+#TAO-DPKG.mwc
 	touch $@
 
 prepatch: prepatch-stamp
 
 pl-stamp: extract-stamp
-	for fn in `find "$(ACE_ROOT)" -name "*.pl"`; do (echo '#!/usr/bin/perl'; cat "$$fn") > "$${fn}T"; mv "$${fn}T" "$$fn"; chmod a+x "$$fn"; done
 	touch $@
 
 patch-stamp: prepatch pl-stamp
@@ -119,8 +104,6 @@ build-stamp: patch-stamp
 clean:
 	dh_testdir
 	dh_testroot
-	ls -alR
-	rm -rf $(ACE_SUBDIR) $(MPC_SUBDIR) debian/patched $(MAN1) $(MAN5) *-stamp debian/mpc-ace.sgml
 	dh_clean
 
 install: build
@@ -131,20 +114,20 @@ install: build
 #       2nd-pass MPC generation is a quick bugfix related with write_install_files@MPC/modules/ProjectCreator.pm
 	echo 2nd-pass MPC generation
 	cd $(ACE_ROOT) &&  bin/mwc.pl $(MWCFLAGS) ACE-DPKG.mwc
-	cd $(TAO_ROOT) &&  ../bin/mwc.pl $(MWCFLAGS) TAO-DPKG.mwc
+	cd $(TAO_ROOT) &&  $(ACE_ROOT)/bin/mwc.pl $(MWCFLAGS) TAO-DPKG.mwc
 #	Install ACE files in $(CURDIR)/$(DT)
 	echo Installing..
-	cd $(ACE_ROOT) && MPC/prj_install.pl $(PRJ_INSTALL_FLAGS) $(CURDIR)/$(DT) ace
-	cd $(ACE_ROOT) && MPC/prj_install.pl $(PRJ_INSTALL_FLAGS) $(CURDIR)/$(DT) apps
-	cd $(ACE_ROOT) && MPC/prj_install.pl $(PRJ_INSTALL_FLAGS) $(CURDIR)/$(DT) ACEXML
-	cd $(ACE_ROOT) && MPC/prj_install.pl $(PRJ_INSTALL_FLAGS) $(CURDIR)/$(DT) Kokyu
-	cd $(ACE_ROOT)/protocols && ../MPC/prj_install.pl $(PRJ_INSTALL_FLAGS) $(CURDIR)/$(DT) ace
+	cd $(ACE_ROOT) && $(MPC_ROOT)/prj_install.pl $(PRJ_INSTALL_FLAGS) $(CURDIR)/$(DT) ace
+	cd $(ACE_ROOT) && $(MPC_ROOT)/prj_install.pl $(PRJ_INSTALL_FLAGS) $(CURDIR)/$(DT) apps
+	cd $(ACE_ROOT) && $(MPC_ROOT)/prj_install.pl $(PRJ_INSTALL_FLAGS) $(CURDIR)/$(DT) ACEXML
+	cd $(ACE_ROOT) && $(MPC_ROOT)/prj_install.pl $(PRJ_INSTALL_FLAGS) $(CURDIR)/$(DT) Kokyu
+	cd $(ACE_ROOT)/protocols && $(MPC_ROOT)/prj_install.pl $(PRJ_INSTALL_FLAGS) $(CURDIR)/$(DT) ace
 
 #	Install TAO files in $(CURDIR)/$(DT)
-	cd $(TAO_ROOT) && ../MPC/prj_install.pl $(PRJ_INSTALL_FLAGS) $(CURDIR)/$(DT) tao
-	cd $(TAO_ROOT) && ../MPC/prj_install.pl $(PRJ_INSTALL_FLAGS) $(CURDIR)/$(DT) orbsvcs
-	cd $(TAO_ROOT) && ../MPC/prj_install.pl -k -s man_files,exe_output,lib_output  -b exe_output=usr/bin -b man_files=usr/share/man -b lib_output=usr/lib  $(CURDIR)/$(DT) TAO_IDL
-	cd $(TAO_ROOT) && ../MPC/prj_install.pl $(PRJ_INSTALL_FLAGS) $(CURDIR)/$(DT) utils
+	cd $(TAO_ROOT) && $(MPC_ROOT)/MPC/prj_install.pl $(PRJ_INSTALL_FLAGS) $(CURDIR)/$(DT) tao
+	cd $(TAO_ROOT) && $(MPC_ROOT)/MPC/prj_install.pl $(PRJ_INSTALL_FLAGS) $(CURDIR)/$(DT) orbsvcs
+	cd $(TAO_ROOT) && $(MPC_ROOT)/MPC/prj_install.pl -k -s man_files,exe_output,lib_output  -b exe_output=usr/bin -b man_files=usr/share/man -b lib_output=usr/lib  $(CURDIR)/$(DT) TAO_IDL
+	cd $(TAO_ROOT) && $(MPC_ROOT)/MPC/prj_install.pl $(PRJ_INSTALL_FLAGS) $(CURDIR)/$(DT) utils
 
 #	Move libraries and excutable to lib and bin, then remove subdirectories
 	cd $(CURDIR)/$(DT)/usr/bin &&  find . -executable -a -type f -exec mv {} . ';' && find . -type d -delete
